homework6/manifest/userauth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userauth
  labels:
    app: order-microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-microservice-app
    spec:
      containers:
        - name: userauth
          image: alyanovao/userauth:1.0.1
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
