homework6/manifest/userservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: user-security-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-security-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-security-app
    spec:
      containers:
        - name: userservice
          image: alyanovao/userservice:1.0.1
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
