homework6/manifest/userauth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: userauth
  labels:
    app: user-security-app
spec:
  type: ClusterIP
  selector:
    app: user-security-app
  ports:
    - port: 8088
      name: web
      protocol: TCP
      targetPort: 8088
