homework6/manifest/userservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: user-security-app
spec:
  type: ClusterIP
  selector:
    app: user-security-app
  ports:
    - port: 8080
      name: web
      protocol: TCP
      targetPort: 8080
